Fix text input overlaping on focus

--- a/css/extra.css
+++ b/css/extra.css
@@ -246,6 +246,16 @@ iframe {
   background: rgba(0,0,0,0.1);
 }
 
+/* Custom select color */
+  ::-moz-selection { /* Code for Firefox */
+  color: #fff;
+  background: #6675df;
+}
+
+::selection {
+  color: #fff;
+  background: #6675df;
+}
 
 
 /*==================================================================
@@ -322,11 +332,11 @@ iframe {
 }
 
 input.input100 {
-  height: 100%;
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
   -moz-transition: all 0.4s;
   transition: all 0.4s;
+  height: 45px;
 }
 
 /*---------------------------------------------*/
@@ -380,7 +390,7 @@ input.input100 {
 }
 
 .input100:focus {
-  height: 48px;
+  height: 50px;
 }
 
 .input100:focus + .focus-input100 + .label-input100 {
